@@ -1,3 +1,7 @@
+Sun Dec 20 11:01:57 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* proc.c (rb_mod_define_method): fix notation.
+
 Sun Dec 20 10:54:15 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* proc.c (proc_new): fix notation.
